# min-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/minimal_agent/: __init__.py  config.py  context.py  llm.py  loop.py  main.py  session.py
src/minimal_agent/tools/: __init__.py  base.py  calculator.py  read_file.py  registry.py  search.py  todo.py  weather.py
tests/: __init__.py  test_context.py  test_loop.py  test_read_file.py  test_session.py  test_tools.py
